ffi_google_oboe/android/.cxx/cmake/debug/armeabi-v7a/android_gradle_build_ffi_google_oboe_armeabi-v7a.stdout.txt
ninja: Entering directory `C:\Users\facun\OneDrive\Desktop\ITBA\6C-ASSD\ASSD-TP4\ffi_google_oboe\android\.cxx\cmake\debug\armeabi-v7a'
[1/57] Building CXX object CMakeFiles/ffi_google_oboe.dir/src/main/cpp/audio/NDKExtractor.cpp.o
[2/57] Building CXX object oboe/CMakeFiles/oboe.dir/src/aaudio/AAudioLoader.cpp.o
[3/57] Building CXX object CMakeFiles/ffi_google_oboe.dir/src/main/cpp/audio/AAssetDataSource.cpp.o
FAILED: CMakeFiles/ffi_google_oboe.dir/src/main/cpp/audio/AAssetDataSource.cpp.o 
C:\Users\facun\AppData\Local\Android\Sdk\ndk\21.1.6352462\toolchains\llvm\prebuilt\windows-x86_64\bin\clang++.exe --target=armv7-none-linux-androideabi21 --gcc-toolchain=C:/Users/facun/AppData/Local/Android/Sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/windows-x86_64 --sysroot=C:/Users/facun/AppData/Local/Android/Sdk/ndk/21.1.6352462/toolchains/llvm/prebuilt/windows-x86_64/sysroot  -DOBOE_ENABLE_LOGGING=1 -Dffi_google_oboe_EXPORTS -I../../../../../../oboe/include -I../../../../src/main/cpp -IC:/Users/facun/OneDrive/Desktop/ITBA/6C-ASSD/ASSD-TP4/oboe/include -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -march=armv7-a -mthumb -Wformat -Werror=format-security   -O0 -fno-limit-debug-info  -fPIC   -Wall -Wextra -pedantic -std=c++1z -MD -MT CMakeFiles/ffi_google_oboe.dir/src/main/cpp/audio/AAssetDataSource.cpp.o -MF CMakeFiles\ffi_google_oboe.dir\src\main\cpp\audio\AAssetDataSource.cpp.o.d -o CMakeFiles/ffi_google_oboe.dir/src/main/cpp/audio/AAssetDataSource.cpp.o -c ../../../../src/main/cpp/audio/AAssetDataSource.cpp
../../../../src/main/cpp/audio/AAssetDataSource.cpp:103:49: error: use of undeclared identifier 'asset'
    int64_t bytesDecoded = NDKExtractor::decode(asset, decodedData, *outputProperties);
                                                ^
../../../../src/main/cpp/audio/AAssetDataSource.cpp:95:67: warning: unused parameter 'buffer' [-Wunused-parameter]
AAssetDataSource *AAssetDataSource::newFromCompressedAsset(float *buffer, size_t len, AudioProperties *outputProperties) {
                                                                  ^
1 warning and 1 error generated.
[4/57] Building CXX object CMakeFiles/ffi_google_oboe.dir/src/main/cpp/audio/Player.cpp.o
[5/57] Building CXX object oboe/CMakeFiles/oboe.dir/src/common/AudioSourceCaller.cpp.o
[6/57] Building CXX object CMakeFiles/ffi_google_oboe.dir/src/main/cpp/DSPCallback.cpp.o
../../../../src/main/cpp/DSPCallback.cpp:24:24: warning: comparison of integers of different signs: 'std::__ndk1::queue<float, std::__ndk1::deque<float, std::__ndk1::allocator<float> > >::size_type' (aka 'unsigned int') and 'int32_t' (aka 'int') [-Wsign-compare]
    if (inQueue.size() > numFrames){
        ~~~~~~~~~~~~~~ ^ ~~~~~~~~~
In file included from ../../../../src/main/cpp/DSPCallback.cpp:5:
../../../../src/main/cpp/DSPCallback.h:21:12: warning: private field 'cycle_count' is not used [-Wunused-private-field]
    size_t cycle_count=0;
           ^
2 warnings generated.
[7/57] Building CXX object CMakeFiles/ffi_google_oboe.dir/src/main/cpp/ffiOboeExport.cpp.o
../../../../src/main/cpp/ffiOboeExport.cpp:21:9: warning: variable 'assetManager' is uninitialized when used here [-Wuninitialized]
    if (assetManager == nullptr) {
        ^~~~~~~~~~~~
../../../../src/main/cpp/ffiOboeExport.cpp:20:32: note: initialize the variable 'assetManager' to silence this warning
    AAssetManager* assetManager;
                               ^
                                = nullptr
1 warning generated.
[8/57] Building CXX object oboe/CMakeFiles/oboe.dir/src/aaudio/AudioStreamAAudio.cpp.o
[9/57] Building CXX object oboe/CMakeFiles/oboe.dir/src/common/AudioStreamBuilder.cpp.o
[10/57] Building CXX object CMakeFiles/ffi_google_oboe.dir/src/main/cpp/OboeFfiStream.cpp.o
../../../../src/main/cpp/OboeFfiStream.cpp:9:111: warning: unused parameter 'f' [-Wunused-parameter]
OboeFfiStream::OboeFfiStream(AAssetManager &assetManager, int sr, void * data, size_t size, oboe::AudioFormat f) : sampleRate(sr), mAssetManager(assetManager) {
                                                                                                              ^
1 warning generated.
[11/57] Building CXX object oboe/CMakeFiles/oboe.dir/src/common/FilterAudioStream.cpp.o
[12/57] Building CXX object oboe/CMakeFiles/oboe.dir/src/common/AudioStream.cpp.o
ninja: build stopped: subcommand failed.
